add some bolt love on flashing

--- a/core/Makefile
+++ b/core/Makefile
@@ -1858,17 +1858,7 @@ bacon: otapackage
 	$(hide) ln -f $(INTERNAL_OTA_PACKAGE_TARGET) $(CUSTOM_TARGET_PACKAGE)
 	$(hide) $(MD5SUM) $(CUSTOM_TARGET_PACKAGE) > $(CUSTOM_TARGET_PACKAGE).md5sum
 	@echo -e ""
-	@echo -e " ▄▄▄▄   ▓█████  ███▄    █ ▒███████▒ ▒█████   ██▀███   ▒█████   ███▄ ▄███▓"
-	@echo -e "▓█████▄ ▓█   ▀  ██ ▀█   █ ▒ ▒ ▒ ▄▀░▒██▒  ██▒▓██ ▒ ██▒▒██▒  ██▒▓██▒▀█▀ ██▒"
-	@echo -e "▒██▒ ▄██▒███   ▓██  ▀█ ██▒░ ▒ ▄▀▒░ ▒██░  ██▒▓██ ░▄█ ▒▒██░  ██▒▓██    ▓██░"
-	@echo -e "▒██░█▀  ▒▓█  ▄ ▓██▒  ▐▌██▒  ▄▀▒   ░▒██   ██░▒██▀▀█▄  ▒██   ██░▒██    ▒██ "
-	@echo -e "░▓█  ▀█▓░▒████▒▒██░   ▓██░▒███████▒░ ████▓▒░░██▓ ▒██▒░ ████▓▒░▒██▒   ░██▒"
-	@echo -e "░▒▓███▀▒░░ ▒░ ░░ ▒░   ▒ ▒ ░▒▒ ▓░▒░▒░ ▒░▒░▒░ ░ ▒▓ ░▒▓░░ ▒░▒░▒░ ░ ▒░   ░  ░"
-	@echo -e "▒░▒   ░  ░ ░  ░░ ░░   ░ ▒░░░▒ ▒ ░ ▒  ░ ▒ ▒░   ░▒ ░ ▒░  ░ ▒ ▒░ ░  ░      ░"
-	@echo -e " ░    ░    ░      ░   ░ ░ ░ ░ ░ ░ ░░ ░ ░ ▒    ░░   ░ ░ ░ ░ ▒  ░      ░   "
-	@echo -e " ░         ░  ░         ░   ░ ░        ░ ░     ░         ░ ░         ░   "
-	@echo -e "      ░                   ░                                              "
-	@echo -e "Bacons Ready!!: $(CUSTOM_TARGET_PACKAGE)"
+	@echo -e "Bolt-Os is Ready!!: $(CUSTOM_TARGET_PACKAGE)"
 
 endif    # build_ota_package
 
